Fix chat UI on mobile sidebar

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -27,6 +27,7 @@
 
 			.modal-content {
 				height: 100%;
+				border: none;
 			}
 		}
 	}
@@ -76,15 +77,49 @@
 
 			li {
 				width: auto;
-				padding: 0;
+				border: none;
+				color: #fff;
+				position: relative;
+				height: 60px;
+				
+				&:hover {
+					background: none;
+				}
+	
+				&:not(:last-child) {
+					border-bottom: none;
+				}
+				
+				.main-avatar {
+					position: absolute;
+					top: 0;
+					left: 0;
 
-				a {
-					color: white;
-
-					i {
-						left: 44px;
-						top: 9px;
+					.avatar {
+						height: 40px;
+					    width: 40px;
+					    font-size: 20px;
+					    border-radius: 0;
 					}
+				}
+				
+				.members {
+					display: none;
+				}
+				
+				.room-name {
+					display: block;
+					overflow: hidden;
+				    white-space: nowrap;
+				    text-overflow: ellipsis;
+				    padding-left: 60px;
+				}
+				
+				.teaser-content {
+					padding-left: 60px;
+					display: block;
+				    font-size: 13px;
+				    opacity: .8;
 				}
 			}
 		}
